Closed Bug 1825054 Opened 3 years ago Closed 3 years ago

Getting text bounds of last character in document causes an infinite loop

Categories

(Core :: Disability Access APIs, defect)

All
macOS
defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox113 --- fixed

People

(Reporter: eeejay, Assigned: eeejay)

References

Details

(Whiteboard: [ctw-m7])

Attachments

(1 file)

When navigating my text in mac the browser hangs when the cursor gets to the end of the doc. This is caused by a boundary search for BOUNDARY_LINE_START that returns the end of the doc which is also the end of the range.

Blocks: a11y-ctw-text
No longer blocks: a11y-ctw
Whiteboard: [ctw-m7]
See Also: → 1825172
Pushed by eisaacson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6ed039c4d88a Don't get stuck in endless loop when getting bounds. r=morgan
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: