Bug 1825054 - Don't get stuck in endless loop when getting bounds. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D173864